<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.oc.hawk</groupId>
    <artifactId>parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.1.RELEASE</version>
        <relativePath/>
    </parent>
    <name>hawk</name>
    <properties>
        <spring.cloud.version>Hoxton.RELEASE</spring.cloud.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <argLine>-Dfile.encoding=UTF-8</argLine>
        <assertj.version>3.6.2</assertj.version>
        <commons.lang3.version>3.10</commons.lang3.version>
        <orika.version>1.4.2</orika.version>
        <assertj.joda.time.version>2.0.0</assertj.joda.time.version>
        <google.guava>29.0-jre</google.guava>
        <jamon.version>2.81</jamon.version>
        <hibernate.version>5.2.11.Final</hibernate.version>
        <logstash.version>4.10</logstash.version>
        <jackson.core>2.10.1</jackson.core>
        <jjwt.version>0.10.5</jjwt.version>
        <commons.crypto.version>1.0.0</commons.crypto.version>
        <commons-io.version>2.6</commons-io.version>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <caffeine.version>2.8.8</caffeine.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- sub-module dependencies -->
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>ddd</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>kubernetes-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>kubernetes-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>kubernetes-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>project-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>project-domain</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>container-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>container-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>message-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>message-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>base-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>base-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>monitor-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oc.hawk</groupId>
                <artifactId>monitor-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>ma.glasnost.orika</groupId>
                <artifactId>orika-core</artifactId>
                <version>${orika.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.core}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-crypto</artifactId>
                <version>${commons.crypto.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${google.guava}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
            <!-- use spring rest template-->
            <exclusions>
                <exclusion>
                    <groupId>com.sun.jersey</groupId>
                    <artifactId>jersey-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jersey</groupId>
                    <artifactId>jersey-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jersey.contribs</groupId>
                    <artifactId>jersey-apache-client4</artifactId>
                </exclusion>
                <exclusion>
                    <artifactId>guava</artifactId>
                    <groupId>com.google.guava</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

    </dependencies>

    <modules>
        <module>api</module>
        <module>test</module>
        <module>ddd</module>
        <module>common</module>
        <module>gateway</module>
        <module>base-service</module>
        <module>project-service</module>
        <module>discovery</module>
        <module>container-service</module>
        <module>kubernetes-service</module>
        <module>kubernetes-keepalive-service</module>
        <module>message-service</module>
        <module>monitor-service</module>
    </modules>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/libs-milestone</url>
        </repository>
        <repository>
            <id>spring-releases</id>
            <name>Spring Releases</name>
            <url>https://repo.spring.io/libs-release</url>
        </repository>
    </repositories>

</project>
